# regionpriceapi

./: Makefile  main.py  pyproject.toml
domain/driver/: constant_price.py  price_per_month.py
domain/stay_offer/models/: offer.py
domain/stay_offer/service/: offer.py
server/: api.py
