[tool.poetry]
name = "regionpriceapi"
version = "0.1.0"
description = ""
authors = ["Gabriel Campanário <gcampanario@ext.worten.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
numpy = "^1.23.2"
pandas = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
